--- a/app/views/home.html
+++ b/app/views/home.html
@@ -3,9 +3,100 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Welcome to Hebralibre</title>
+    <link href="../public/css/home.css" rel="stylesheet">
+    <link href="../public/css/header-footer.css" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins:ital,wght@0,100;0,400;1,500&family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
 </head>
 <body>
-    <h1>HOME</h1>
+   <header>
+        <div class="redes">
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-pinterest"></i></a>
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-whatsapp"></i></a>
+        </div>
+        <div class="nav-bar">
+                <img src="../public/img/logo-sin-fondo-prueba.png" alt="Logo" class="logo">
+        </div>
+        <div class="nav-bar">
+            <ul class="enlaces">
+                <li><a href=  "/"   >Home</a></li>
+                <li><a href= '/catalogo' >Productos</a></li>
+                <li><a href='/carrito'  >Carrito de Compras</a></li>
+                <li><a href='/registro'  >Registrarse</a></li>
+                <li><a href='/contacto'  >Contacto</a></li>
+                <li><a href='/sobre-nosotros'  >Sobre Mi</a></li>
+             </ul>
+        </div>       
+   </header>
+   <section class="section-1">
+
+    <div class="imagen">
+        <img src="../public/img/Hebra-Libre.jpg" alt="...">
+    </div>
+
+</section>
+
+<section class="section-2">
+
+    <p>¡Sigueme en mi instagram! Recibirás contenido exclusivo y un tutorial para hacer un bordado <i class="fa-brands fa-instagram" href="https://www.instagram.com/hebralibre?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw%3D%3D"></i></p>
+
+</section>
+
+<section class="section-3">
+
+    <div class="card-1">
+        <img src="../public/img/img_sec1.webp" href="#">
+            <h2>Bordado Gatuno</h2>
+            <p>"Adorna tu espacio con encanto felino con nuestro exquisito bordado a mano de un gato. Cada detalle del suave pelaje y los curiosos ojos ha sido cuidadosamente tejido con amor y destreza artesanal. Este pequeño y elegante gato bordado añadirá una pizca de personalidad y calidez a cualquier rincón de tu hogar. Perfecto como regalo único o para deleitar a los amantes de los gatos, esta obra de arte hecha a mano es más que un adorno, es una expresión de amor por la artesanía y la belleza felina."</p>
+            <a href="#" class="btn btn-primary">Comprar ya!</a>
+        
+    </div>
+    <div class="card-2">
+        <img src="../public/img/img_sec2.webp" href="#">
+            <h2>Bordado Perruno</h2>
+            <p>"Transforma tu espacio en un hogar lleno de alegría y lealtad con nuestro encantador bordado a mano de un perro. Cada trazo meticuloso captura la esencia juguetona y la lealtad incondicional de nuestro amigo canino. Con detalles vívidos que resaltan la personalidad única de cada raza, este bordado es más que una obra de arte: es una celebración de la conexión especial entre humanos y perros. Perfecto como un regalo con corazón o para realzar tu propio espacio con la esencia cálida y amigable de los perros. Descubre la magia de la artesanía y lleva a casa a tu nuevo amigo bordado, listo para iluminar tu vida con amor y alegría."</p>
+            <a href="#" class="btn btn-primary">Comprar ya!</a>
+        
+    </div>
+    <div class="card-3">
+        <img src="../public/img/img_sec3.webp" href="#">
+            <h2>Bordado Pueblito Mágico</h2>
+            <p>
+                "Embárcate en un viaje visual a la tranquilidad con nuestro cautivador bordado a mano de un pintoresco pueblito. Cada puntada cuenta la historia de calles empedradas, casitas con encanto y una atmósfera acogedora que solo un pueblo puede ofrecer. Este meticuloso bordado captura la esencia nostálgica de la vida en un pueblito, con detalles que te transportarán a un lugar donde el tiempo se mueve a un ritmo más tranquilo.
+                
+                Perfecto como pieza central en tu hogar o como regalo que evoca recuerdos y sentimientos entrañables, nuestro bordado a mano del pueblito es una celebración de la vida sencilla y la belleza de lo pintoresco. Cada puntada es una expresión de la artesanía y la atención al detalle, creando una obra de arte que iluminará cualquier espacio con la magia y la serenidad de un pequeño rincón pintoresco."</p>
+            <a href="#" class="btn btn-primary">Comprar ya!</a>
+        
+    </div>
+</section>
+
+<section class="section-6">
+
+<section class="section-4">
+    <img src="../public/img/img_principal.webp" alt="Guadalupe">
+</section>
+
+<section class="section-5">
+    <p>Acerca de mí</p>
+    <p>"En mi apasionado taller de bordados textiles a mano, doy vida a la creatividad a través de hilos y agujas. Cada pieza que creo es una obra de arte única, meticulosamente elaborada con amor y atención al detalle. Desde elegantes diseños florales hasta motivos personalizados, transformo prendas de vestir, accesorios y artículos para el hogar en piezas exclusivas que reflejan la belleza de la artesanía tradicional.
+
+        Me especializó en la creación de bordados que cuentan historias, capturando momentos especiales y expresando la individualidad de cada cliente. Ya sea que estés buscando personalizar tu ropa, regalar un artículo único o añadir un toque distintivo a tu hogar, mis bordados hechos a mano ofrecen un toque personal y distintivo.
+        
+        Mi compromiso con la calidad y la artesanía se refleja en cada puntada, asegurando que cada pieza sea duradera y visualmente impactante. Trabajo de cerca con mis clientes para comprender sus visiones y convertirlas en realidad a través de mis bordados personalizados.
+        
+        Descubre el encanto atemporal de la artesanía tradicional con mis bordados textiles a mano. Cada pieza que cree es más que un simple adorno; es una expresión auténtica de creatividad y dedicación. Únete a mi mientras tejemos historias con hilo, una puntada a la vez."</p>
+</section>
+
+</section>
+   <footer>
+    <img src="../public/img/Hebra_Libre_footer.jpg" id="footer">
+    <h5>© Copyright todos los derechos reservados</h6>
+   </footer>
 </body>
 </html>
