Se borraron archivos repetidos y se mejoró la estructura

--- a/views/about.html
+++ b/views/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre Mi</title>
 
-    <link href="../public/css/header-footer.css" rel="stylesheet">
+    <link href="/css/header-footer.css" rel="stylesheet">
 </head>
 <body>
     <!--header>
@@ -16,7 +16,7 @@
             <a href="#"><i class="fab fa-whatsapp"></i></a>
         </div-->
         <div class="nav-bar">
-                <img src="../public/img/logo-sin-fondo-prueba.png" alt="Logo" class="logo">
+                <img src="/img/logo-sin-fondo-prueba.png" alt="Logo" class="logo">
         </div>
         <div class="nav-bar">
             <ul class="enlaces">
@@ -31,7 +31,7 @@
    </header>
     <div class="about-me">
         <h1>Acerca de Mí</h1>
-        <img src="../public/img/img_principal.webp" height="400px" alt="Mi Foto">
+        <img src="/img/img_principal.webp" height="400px" alt="Mi Foto">
         <p>¡Hola! Soy [Tu Nombre]. Me encanta [breve descripción sobre ti o tu trabajo]. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus at lacinia felis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Integer nec elit vel neque convallis eleifend.</p>
     </div>
     <footer>
