--- a/views/contact.html
+++ b/views/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
 
-    <link href="../public/css/header-footer.css" rel="stylesheet">
+    <link href="/css/header-footer.css" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -16,7 +16,7 @@
         <a href="#"><i class="fab fa-whatsapp"></i></a>
     </div-->
     <div class="nav-bar">
-            <img src="../public/img/logo-sin-fondo-prueba.png" alt="Logo" class="logo">
+            <img src="/img/logo-sin-fondo-prueba.png" alt="Logo" class="logo">
     </div>
     <div class="nav-bar">
         <ul class="enlaces">
