--- a/views/home.html
+++ b/views/home.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Hebralibre</title>
-    <link href="../public/css/home.css" rel="stylesheet">
-    <link href="../public/css/header-footer.css" rel="stylesheet">
+    <link href="/css/home.css" rel="stylesheet">
+    <link href="/css/header-footer.css" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,7 +21,7 @@
             <a href="#"><i class="fab fa-whatsapp"></i></a>
         </div>
         <div class="nav-bar">
-                <img src="../public/img/logo-sin-fondo-prueba.png" alt="Logo" class="logo">
+                <img src="/img/logo-sin-fondo-prueba.png" alt="Logo" class="logo">
         </div>
         <div class="nav-bar">
             <ul class="enlaces">
@@ -37,7 +37,7 @@
    <section class="section-1">
 
     <div class="imagen">
-        <img src="../public/img/Hebra-Libre.jpg" alt="...">
+        <img src="/img/Hebra-Libre.jpg" alt="...">
     </div>
 
 </section>
@@ -51,21 +51,21 @@
 <section class="section-3">
 
     <div class="card-1">
-        <img src="../public/img/img_sec1.webp" href="#">
+        <img src="/img/img_sec1.webp" href="#">
             <h2>Bordado Gatuno</h2>
             <p>"Adorna tu espacio con encanto felino con nuestro exquisito bordado a mano de un gato. Cada detalle del suave pelaje y los curiosos ojos ha sido cuidadosamente tejido con amor y destreza artesanal. Este pequeño y elegante gato bordado añadirá una pizca de personalidad y calidez a cualquier rincón de tu hogar. Perfecto como regalo único o para deleitar a los amantes de los gatos, esta obra de arte hecha a mano es más que un adorno, es una expresión de amor por la artesanía y la belleza felina."</p>
             <a href="#" class="btn btn-primary">Comprar ya!</a>
         
     </div>
     <div class="card-2">
-        <img src="../public/img/img_sec2.webp" href="#">
+        <img src="/img/img_sec2.webp" href="#">
             <h2>Bordado Perruno</h2>
             <p>"Transforma tu espacio en un hogar lleno de alegría y lealtad con nuestro encantador bordado a mano de un perro. Cada trazo meticuloso captura la esencia juguetona y la lealtad incondicional de nuestro amigo canino. Con detalles vívidos que resaltan la personalidad única de cada raza, este bordado es más que una obra de arte: es una celebración de la conexión especial entre humanos y perros. Perfecto como un regalo con corazón o para realzar tu propio espacio con la esencia cálida y amigable de los perros. Descubre la magia de la artesanía y lleva a casa a tu nuevo amigo bordado, listo para iluminar tu vida con amor y alegría."</p>
             <a href="#" class="btn btn-primary">Comprar ya!</a>
         
     </div>
     <div class="card-3">
-        <img src="../public/img/img_sec3.webp" href="#">
+        <img src="/img/img_sec3.webp" href="#">
             <h2>Bordado Pueblito Mágico</h2>
             <p>
                 "Embárcate en un viaje visual a la tranquilidad con nuestro cautivador bordado a mano de un pintoresco pueblito. Cada puntada cuenta la historia de calles empedradas, casitas con encanto y una atmósfera acogedora que solo un pueblo puede ofrecer. Este meticuloso bordado captura la esencia nostálgica de la vida en un pueblito, con detalles que te transportarán a un lugar donde el tiempo se mueve a un ritmo más tranquilo.
@@ -79,7 +79,7 @@
 <section class="section-6">
 
 <section class="section-4">
-    <img src="../public/img/img_principal.webp" alt="Guadalupe">
+    <img src="/img/img_principal.webp" alt="Guadalupe">
 </section>
 
 <section class="section-5">
@@ -95,7 +95,7 @@
 
 </section>
    <footer>
-    <img src="../public/img/Hebra_Libre_footer.jpg" id="footer">
+    <img src="/img/Hebra_Libre_footer.jpg" id="footer">
     <h5>© Copyright todos los derechos reservados</h6>
    </footer>
 </body>
