--- a/views/carrito.html
+++ b/views/carrito.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carrito de Compras</title>
-    <link rel="stylesheet" href="../public/css/carrito.css">
+    <link rel="stylesheet" href="/css/carrito.css">
 
-    <link href="../public/css/header-footer.css" rel="stylesheet"> <!--PUSE ESTO PARA QUE EL HEADER TOME EL ESTILO DEL HOME-->
+    <link href="/css/header-footer.css" rel="stylesheet"> <!--PUSE ESTO PARA QUE EL HEADER TOME EL ESTILO DEL HOME-->
   </head>
 
   <body>
@@ -18,7 +18,7 @@
           <a href="#"><i class="fab fa-whatsapp"></i></a>
       </div-->
       <div class="nav-bar">
-              <img src="../public/img/logo-sin-fondo-prueba.png" alt="Logo" class="logo">
+              <img src="/img/logo-sin-fondo-prueba.png" alt="Logo" class="logo">
       </div>
       <div class="nav-bar">
           <ul class="enlaces">
@@ -39,7 +39,7 @@
           <!-- Contenido del carrito -->
           <div class="product">
             <div class="product-details">
-            <img class="product-img" src="../public/img/img_sec1.webp" alt="Producto 1">
+            <img class="product-img" src="/img/img_sec1.webp" alt="Producto 1">
             <div class="product-info">
               <h2>Producto 1</h2>
               <p>Descripción breve del producto 1.</p>
@@ -54,7 +54,7 @@
             </div>
             </div>
               <div class="product-details">
-            <img class="product-img" src="../public/img/img_sec2.webp" alt="Producto 2">
+            <img class="product-img" src="/img/img_sec2.webp" alt="Producto 2">
             <div class="product-info">
               <h2>Producto 2</h2>
               <p>Descripción breve del producto 2.</p>
@@ -88,7 +88,7 @@
         <section class="recommendation">
         <h2>Quizá También Te Interese</h2>
         <div>
-          <img class="recommendation-img" src="../public/img/img_sec3.webp"  alt="Producto 3">
+          <img class="recommendation-img" src="/img/img_sec3.webp"  alt="Producto 3">
         </div>
         <!-- Contenido de productos recomendados -->
         <!-- ... -->
