--- a/views/catalogo.html
+++ b/views/catalogo.html
@@ -6,9 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins:ital,wght@0,100;0,400;1,500&family=Roboto:wght@100&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">      
-        <link rel="stylesheet" href="../public/css/catalogoProducto.css">
+        <link rel="stylesheet" href="/css/catalogoProducto.css">
 
-        <link href="../public/css/header-footer.css" rel="stylesheet">
+        <link href="/css/header-footer.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -19,7 +19,7 @@
             <a href="#"><i class="fab fa-whatsapp"></i></a>
         </div-->
         <div class="nav-bar">
-                <img src="../public/img/logo-sin-fondo-prueba.png" alt="Logo" class="logo">
+                <img src="/img/logo-sin-fondo-prueba.png" alt="Logo" class="logo">
         </div>
         <div class="nav-bar">
             <ul class="enlaces">
@@ -38,7 +38,7 @@
             <div class="products">
                 <article>
                     <a href="/producto">
-                        <img src="../public/img/img_sec1.webp" alt="producto_1" class="product_img"/>
+                        <img src="/img/img_sec1.webp" alt="producto_1" class="product_img"/>
                     </a>
                     <div class="main-article">
                         <a href="#"> <i class="fas fa-truck"></i> </a>
@@ -49,7 +49,7 @@
                 </article>
                 <article>
                     <a href="#">
-                        <img src="../public/img/img_sec2.webp" alt="producto_2" class="product_img"/>
+                        <img src="/img/img_sec2.webp" alt="producto_2" class="product_img"/>
                     </a>
                     <div class="main-article">
                         <a href="#"> <i class="fas fa-truck"></i> </a>
@@ -60,7 +60,7 @@
                 </article>
                 <article>
                     <a href="#">
-                         <img src="../public/img/img_sec3.webp" alt="producto_3" class="product_img"/>
+                         <img src="/img/img_sec3.webp" alt="producto_3" class="product_img"/>
                     </a>
                     <div class="main-article">
                         <a href="/producto">
@@ -72,7 +72,7 @@
                 </article>
                 <article>
                     <a href="#">
-                         <img src="../public/img/logo-hebralibre.png" alt="producto_4" class="product_img"/>
+                         <img src="/img/logo-hebralibre.png" alt="producto_4" class="product_img"/>
                     </a>
                     <div class="main-article">
                         <a href="#"> <i class="fas fa-truck"></i> </a>
@@ -88,7 +88,7 @@
             <div class="products">
                 <article>
                     <a href="#">
-                         <img src="../public/img/img_sec1.webp" alt="producto_oferta_1" class="product_img"/>
+                         <img src="/img/img_sec1.webp" alt="producto_oferta_1" class="product_img"/>
                     </a>
                     <div class="main-article">
                         <a href="#"> <i class="fas fa-truck"></i> </a>
@@ -99,7 +99,7 @@
                 </article>
                 <article>
                     <a href="#">
-                        <img src="../public/img/img_sec2.webp" alt="producto_oferta_2" class="product_img"/>
+                        <img src="/img/img_sec2.webp" alt="producto_oferta_2" class="product_img"/>
                     </a>
                     <div class="main-article">
                         <a href="#"> <i class="fas fa-truck"></i> </a>
@@ -110,7 +110,7 @@
                 </article>
                 <article>
                     <a href="#">
-                        <img src="../public/img/img_sec3.webp" alt="producto_oferta_3" class="product_img"/>
+                        <img src="/img/img_sec3.webp" alt="producto_oferta_3" class="product_img"/>
                     </a>
                     <div class="main-article">
                         <a href="#"> <i class="fas fa-truck"></i> </a>
@@ -121,7 +121,7 @@
                 </article>
                 <article>
                     <a href="#">
-                          <img src="../public/img/logo-hebralibre.png" alt="producto_oferta_4" class="product_img"/>
+                          <img src="/img/logo-hebralibre.png" alt="producto_oferta_4" class="product_img"/>
                      </a>
                     <div class="main-article">
                         <a href="#"> <i class="fas fa-truck"></i> </a>
