--- a/views/producto.html
+++ b/views/producto.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Producto</title>
 
-    <link href="../public/css/header-footer.css" rel="stylesheet">
+    <link href="/css/header-footer.css" rel="stylesheet">
     
-    <link rel="stylesheet" href="../public/css/catalogoProducto.css">
+    <link rel="stylesheet" href="/css/catalogoProducto.css">
     <script src="/javascript/producto.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins:ital,wght@0,100;0,400;1,500&family=Roboto:wght@100&display=swap" rel="stylesheet">
 </head>
@@ -20,7 +20,7 @@
             <a href="#"><i class="fab fa-whatsapp"></i></a>
         </div-->
         <div class="nav-bar">
-                <img src="../public/img/logo-sin-fondo-prueba.png" alt="Logo" class="logo">
+                <img src="/img/logo-sin-fondo-prueba.png" alt="Logo" class="logo">
         </div>
         <div class="nav-bar">
             <ul class="enlaces">
@@ -38,7 +38,7 @@
             
             <div class="products_principal">
                       
-                    <img id="imagenPrincipal" src='../public/img/img_sec1.webp' alt="imagenPrincipal" onclick="cambiarImagen('/img/img_principal.webp')">
+                    <img id="imagenPrincipal" src='/img/img_sec1.webp' alt="imagenPrincipal" onclick="cambiarImagen('/img/img_principal.webp')">
 
                     <div class="contenido_producto">                       
                         <h4 class="titulo">titulo_1 !!</h4>
@@ -59,10 +59,10 @@
                     </div>       
             </div>
             <div class="imagenes-adicionales">
-                <img src="../public/img/img_sec1.webp" alt="Imagen Adicional 1" onclick="cambiarImagen('/img/img_sec1.webp')">
-                <img src="../public/img/img_sec2.webp" alt="Imagen Adicional 2" onclick="cambiarImagen('/img/img_sec2.webp')">
-                <img src="../public/img/img_sec3.webp" alt="Imagen Adicional 3" onclick="cambiarImagen('/img/img_sec3.webp')">
-                <img src="../public/img/logo-hebralibre.png" alt="imagen principal" onclick="cambiarImagen('/img/logo-hebralibre.png')">
+                <img src="/img/img_sec1.webp" alt="Imagen Adicional 1" onclick="cambiarImagen('/img/img_sec1.webp')">
+                <img src="/img/img_sec2.webp" alt="Imagen Adicional 2" onclick="cambiarImagen('/img/img_sec2.webp')">
+                <img src="/img/img_sec3.webp" alt="Imagen Adicional 3" onclick="cambiarImagen('/img/img_sec3.webp')">
+                <img src="/img/logo-hebralibre.png" alt="imagen principal" onclick="cambiarImagen('/img/logo-hebralibre.png')">
             </div>
         </section>            
     <footer>      
