--- a/views/register.html
+++ b/views/register.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Crear Cuenta </title>
-    <link rel="stylesheet"  href="../public/css/register.css">
+    <link rel="stylesheet"  href="/css/register.css">
 
-    <link href="../public/css/header-footer.css" rel="stylesheet">
+    <link href="/css/header-footer.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -17,7 +17,7 @@
             <a href="#"><i class="fab fa-whatsapp"></i></a>
         </div-->
         <div class="nav-bar">
-                <img src="../public/img/logo-sin-fondo-prueba.png" alt="Logo" class="logo">
+                <img src="/img/logo-sin-fondo-prueba.png" alt="Logo" class="logo">
         </div>
         <div class="nav-bar">
             <ul class="enlaces">
