Se corrigieron errores en app.js

--- a/public/css/register.css
+++ b/public/css/register.css
@@ -18,6 +18,8 @@ body {
     border-radius: 4px;
     font-family: 'calibri';
     color: white;
+    margin-top: 60px;
+    margin-bottom: 60px;
 }
 
 .form-register h4 {
