--- a/views/about.html
+++ b/views/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +8,8 @@
     <link href="/css/header-footer.css" rel="stylesheet">
 </head>
 <body>
-    <!--header>
-        <div class="redes">
+    <header>
+        <!--div class="redes">
             <a href="#"><i class="fab fa-instagram"></i></a>
             <a href="#"><i class="fab fa-pinterest"></i></a>
             <a href="#"><i class="fab fa-facebook"></i></a>
