--- a/public/css/carrito.css
+++ b/public/css/carrito.css
@@ -1,96 +1,204 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
+  font-family: Roboto, sans-serif;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  background-image: url(/img/HebraLibreFondo.jpg);
+}
+
+/*----------Header-----------
+
+header{
+  background-color: #f5c597;
+  padding: 10px;
+  border-bottom: solid 4px #d0b6b7;
+}
+
+.redes{
+  position: absolute;
+  top: 15px;
+  left: 10px;
+}
+
+header i{
+  color: #859bb2;
+  font-size: 20px;
+  margin-right: 7px;
+  border: #d0b6b7 solid 1px;
+  border-radius:30%;
+  padding: 4px;
+  box-shadow: 1px 2px 6px #859bb2;
+}
+
+.nav-bar{
+  display: flex;
+  justify-content: center;
+}
+
+.enlaces{
+  display: flex;
+  list-style-type: none;
+  margin-right: 20px;
+}
+
+li{
+  margin-right: 10px;
+}
+.logo{
+  width: 190px;
+  height: 190px;
+  text-align: center;
+}*/
+
+.container-principal{
+  display: flex;
+}
+
+.container {
+  width: 70%;
+  border: 1px solid #3D3A37;
+  box-sizing: border-box ;
+}
+
+.cart-section {
+  flex: 1;
+  padding: 20px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+}
+
+.product {
+  display: inline;
+  align-items: center;
+}
+
+.product-img {
+  max-width: 150px; /* Ajusta según tus necesidades */
+  margin-right: 10px;
+}
+
+.product-details {
+  border: 2px solid #3D3A37;
+  margin: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between; /* Distribuye los elementos en el espacio disponible */
+
+}
+
+.product-info{
+  flex: 1;
+  margin-right: 10px; /* Ajusta el espacio entre la imagen y la información del producto */
+}
+
+
+.sidebar {
+  width: 30%;
+  border: 1px solid #3D3A37;
+  display: flex;
+  flex-direction: column;
   }
-  
-  header {
-    background-color: #333;
-    color: white;
-    padding: 10px;
-    text-align: center;
+
+
+.subtotal {
+  font-family: poppins;
+  flex: 1;
+  margin-top: 20px;
+  margin-left: 10px;
+  position: relative;
+}
+
+.recommendation {
+  border: 1px solid #3D3A37;
+  padding: 10px;
+  margin-top: 20px;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.recommendation-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.recommendation-img {
+  max-width: 150px; /* Ajusta según tus necesidades */
+  margin-right: 10px;
+  display: inline-block
+}
+
+.checkout {
+  margin-top: 20px;
+  text-align: center;
+  box-sizing: border-box;
+}
+
+.checkout-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/*---------Foter----------
+
+footer{
+  background-color:white;
+  margin-bottom: 10px;
+  border-top: solid 4px #d0b6b7;
+  padding-top: 25px;
+  padding-bottom: 10px;
+}
+
+footer h5{
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  background-color: #cac2c0;
+}*/
+
+/* Media queries para pantallas pequeñas (ej. teléfonos) */
+@media screen and (max-width: 768px) {
+  .redes i {
+    margin-right: 10px; /* Reduzco el espacio entre íconos de redes sociales */
+  }
+
+  .logo {
     width: 100%;
+    max-width: 150px;
+    height: auto;
+    margin: 0 auto; /* Centra el logo */
   }
-  
-  .container-principal{
-    display: flex;
-  }
-  
+
   .container {
-    width: 70%;
-    border: 1px solid #118536;
-    box-sizing: border-box ;
-  }
-  
-  .cart-section {
-    flex: 1;
-    padding: 20px;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .product {
-    display: inline;
-    align-items: center;
-  }
-  
-  .product-img {
-    max-width: 150px; /* Ajusta según tus necesidades */
-    margin-right: 10px;
-  }
-  
-  .recommendation-img {
-    max-width: 150px; /* Ajusta según tus necesidades */
-    margin-right: 10px;
-    align-items: center;
-  }
-  
-  .product-details {
-    border: 2px solid #060505;
-    margin: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between; /* Distribuye los elementos en el espacio disponible */
-  
-  }
-  
-  .product-info{
-    flex: 1;
-    margin-right: 10px; /* Ajusta el espacio entre la imagen y la información del producto */
-  }
-  
-  
-  .sidebar {
-    width: 30%;
-    border: 1px solid #060505;
-    display: flex;
-    flex-direction: column;
-    }
-  
-  
-  .subtotal {
-    flex: 1;
-    margin-top: 20px;
-    position: relative;
-  }
-  
-  .recommendation {
-    border: 1px solid #060505;
-    padding: 10px;
-    margin-top: 20px;
     width: 100%;
     box-sizing: border-box;
-  
-    
+    margin-right: 0;
   }
-  
-  .checkout {
+
+  .sidebar {
+    width: 100%;
     margin-top: 20px;
-    text-align: center;
-    box-sizing: border-box;
   }
-  
-    
+
+  .subtotal {
+    margin-left: 0;
+  }
+
+  .recommendation-img {
+    max-width: 100%;
+    margin-right: 10px;
+  }
+}
+
+/* Media queries para pantallas medianas (ej. tabletas) */
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  /* ... (ajustes adicionales según sea necesario) ... */
+}
+
+/* Media queries para pantallas grandes (ej. computadoras) */
+@media screen and (min-width: 1025px) {
+  /* ... (ajustes adicionales según sea necesario) ... */
+}
