--- a/views/catalogo.html
+++ b/views/catalogo.html
@@ -28,7 +28,7 @@
                 <li><a href='/carrito'  >Carrito de Compras</a></li>
                 <li><a href='/registro'  >Registrarse</a></li>
                 <li><a href='/contacto'  >Contacto</a></li>
-                <li><a href='/sobre-nosotros'  >Sobre Mi</a></li>
+                <!--li><a href='/sobre-nosotros'  >Sobre Mi</a></li-->
              </ul>
         </div> 
     </header>
