--- a/views/producto.html
+++ b/views/producto.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="/css/catalogoProducto.css">
     <script src="/javascript/producto.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins:ital,wght@0,100;0,400;1,500&family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudﬂare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+rel="stylesheet" />
 </head>
 <body>
     <header>
@@ -29,7 +31,7 @@
                 <li><a href='/carrito'  >Carrito de Compras</a></li>
                 <li><a href='/registro'  >Registrarse</a></li>
                 <li><a href='/contacto'  >Contacto</a></li>
-                <li><a href='/sobre-nosotros'  >Sobre Mi</a></li>
+                <!--li><a href='/sobre-nosotros'  >Sobre Mi</a></li-->
              </ul>
         </div> 
     </header>
@@ -41,21 +43,16 @@
                     <img id="imagenPrincipal" src='/img/img_sec1.webp' alt="imagenPrincipal" onclick="cambiarImagen('/img/img_principal.webp')">
 
                     <div class="contenido_producto">                       
-                        <h4 class="titulo">titulo_1 !!</h4>
+                        <h4 class="titulo">Bordado Gatuno</h4>
                         <p class="descrpcion_producto" >
-                            
-                            Estas flores siempre están frescas. Florecen especialmente para ti, para que sientas que todos los días son primavera…
-
-                            Una pieza única de diseño y producción propia, bordada a mano.
-                            
-                            Medidas: cadena aprox. 42 cm longitud. Colgante aprox. 3 cm diámetro.
-                            
-                            Materiales: madera, tela de lino e hilos de algodón.
-                            
-                            Especificaciones: colgante fabricado con madera FSC y tela de lino. La tela ha sido bordada a mano. Cadena de latón libre en níquel y plomo.
-                            
-                            Aunque las fotos están tomadas con luz natural puede haber una ligera variación en los colores.
+                            "Adorna tu espacio con encanto felino con nuestro exquisito bordado a mano de un gato. 
+                                Cada detalle del suave pelaje y los curiosos ojos ha sido cuidadosamente tejido con amor y destreza
+                                 artesanal. Este pequeño y elegante gato bordado añadirá una pizca de personalidad y calidez a cualquier
+                                  rincón de tu hogar. Perfecto como regalo único o para deleitar a los amantes de los gatos, esta 
+                                  obra de arte hecha a mano es más que un adorno, es una expresión de amor por la artesanía y la
+                                   belleza felina."
                         </p>
+                        <a href="#"> <i class="fas fa-truck"></i> </a>
                     </div>       
             </div>
             <div class="imagenes-adicionales">
