--- a/views/register.html
+++ b/views/register.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Crear Cuenta </title>
     <link rel="stylesheet"  href="/css/register.css">
-
     <link href="/css/header-footer.css" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins:ital,wght@0,100;0,400;1,500&family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
 </head>
 <body>
     <header>
@@ -26,7 +30,7 @@
                 <li><a href='/carrito'  >Carrito de Compras</a></li>
                 <li><a href='/registro'  >Registrarse</a></li>
                 <li><a href='/contacto'  >Contacto</a></li>
-                <li><a href='/sobre-nosotros'  >Sobre Mi</a></li>
+                <!--li><a href='/sobre-nosotros'  >Sobre Mi</a></li-->
              </ul>
         </div>       
    </header>
@@ -38,7 +42,7 @@
         <input class="controls" type="password" name="contrasenia" id="contrasenia" placeholder="Contraseña">
         <input class="controls" type="password" name="confirmar_contrasenia" id="confirmar_contrasenia" placeholder="Confirmar contraseña"><br>
         <input class="botom" type="submit" value="Crear Cuenta">
-        <p>¿Tienes una cuenta? <a href="#">Iniciar sesión</a></p>
+        <p>¿Tienes una cuenta? <a href="/iniciar-sesion">Iniciar sesión</a></p>
     </form>
     <footer>
         <!--img src="./img/Hebra_Libre_footer.jpg" id="footer"-->
