--- a/views/home.html
+++ b/views/home.html
@@ -15,10 +15,10 @@
 <body>
    <header>
         <div class="redes">
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-pinterest"></i></a>
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-whatsapp"></i></a>
+            <a href="https://www.instagram.com/hebralibre/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <!--a href="#"><i class="fab fa-pinterest"></i></a-->
+            <a href="https://www.facebook.com/soyhebralibre" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="https://wa.me/+5493884175520" target="_blank"><i class="fab fa-whatsapp"></i></a>
         </div>
         <div class="nav-bar">
                 <img src="/img/logo-sin-fondo-prueba.png" alt="Logo" class="logo">
@@ -30,7 +30,7 @@
                 <li><a href='/carrito'  >Carrito de Compras</a></li>
                 <li><a href='/registro'  >Registrarse</a></li>
                 <li><a href='/contacto'  >Contacto</a></li>
-                <li><a href='/sobre-nosotros'  >Sobre Mi</a></li>
+                <!--li><a href='/sobre-nosotros'  >Sobre Mi</a></li-->
              </ul>
         </div>       
    </header>
