--- a/public/css/catalogoProducto.css
+++ b/public/css/catalogoProducto.css
@@ -48,7 +48,7 @@ header{
     text-align: center;
   }*/
 
-/*body*/
+/*-----------------body----------*/
 
 body{
     font-family: 'Roboto', sans-serif;
@@ -168,7 +168,7 @@ article div.main-article{
         width: 22%;
     }
 }
-/* producto */
+/* --------------producto----------------- */
 
 body {
     margin: 0;
@@ -179,7 +179,7 @@ body {
     letter-spacing: 1px;
     line-height: 2;
     /*background-color: #d0b6b7;*/
-    background-image: url(../img/HebraLibreFondo.jpg);
+    background-image: url(/img/HebraLibreFondo.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -191,6 +191,7 @@ body {
     display: flex;
     justify-content: flex-start; 
     margin-top: 20px;
+   
 }
 .contenido_producto {
     display: flex;
@@ -238,10 +239,39 @@ body {
     margin: 5px; 
     padding-left: 10px;
 }
-/*footer*/
+/* caja padre de la imagen principal y logo de compra*/
+.imgPrinc-carrito {
+    position: relative;
+    margin-top: 20px;
+}
+
+/* caja del logo compra-camion*/
+.icono-truck {
+    position: absolute;
+    top: 40px;
+    right: 40px; 
+    padding: 10px;
+    border-radius: 50%; 
+    border-color: green;
+    background-color: white; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-decoration: none;
+    border: 2px solid green;
+}
+/* estilo al elemento camion*/
+.icono-truck i {
+    font-size: 30px; 
+    color: green; 
+    border: 5px;
+}
+
+
+
+/*--------footer-----------
+
 #footer {
     width: 100%;
     height: 40vh;
-    object-fit: cover; /* Ajusta el tamaño de la imagen manteniendo la proporción y cortando si es necesario */
+    object-fit: cover; /*Ajusta el tamaño de la imagen manteniendo la proporción y cortando si es necesario
     
-}
+}*/
