--- a/public/css/header-footer.css
+++ b/public/css/header-footer.css
@@ -62,6 +62,7 @@ header{
     border-top: solid 4px #d0b6b7;
     padding-top: 25px;
     padding-bottom: 10px;
+    
   }
   
   footer h5{
@@ -69,4 +70,5 @@ header{
     justify-content: center;
     align-items: flex-end;
     background-color: #cac2c0;
+    font-family: 'Roboto', sans-serif;
   }
