correccion de links del header

--- a/src/views/producto.ejs
+++ b/src/views/producto.ejs
@@ -26,10 +26,10 @@
         <div class="nav-bar">
             <ul class="enlaces">
                 <li><a href=  "/"   >Home</a></li>
-                <li><a href= '/catalogo' >Productos</a></li>
-                <li><a href='/carrito'  >Carrito de Compras</a></li>
-                <li><a href='/registro'  >Registrarse</a></li>
-                <li><a href='/contacto'  >Contacto</a></li>
+                <li><a href='/productos/catalogo' >Productos</a></li>
+                <li><a href='/productos/carrito'  >Carrito de Compras</a></li>
+                <li><a href='/usuarios/register'  >Registrarse</a></li>
+                <li><a href='/contact'  >Contacto</a></li>
                 <!--li><a href='/sobre-nosotros'  >Sobre Mi</a></li-->
              </ul>
         </div> 
