--- a/src/views/catalogo.ejs
+++ b/src/views/catalogo.ejs
@@ -24,10 +24,10 @@
         <div class="nav-bar">
             <ul class="enlaces">
                 <li><a href=  "/"   >Home</a></li>
-                <li><a href= '/catalogo' >Productos</a></li>
-                <li><a href='/carrito'  >Carrito de Compras</a></li>
-                <li><a href='/registro'  >Registrarse</a></li>
-                <li><a href='/contacto'  >Contacto</a></li>
+                <li><a href='/productos/catalogo' >Productos</a></li>
+                <li><a href='/productos/carrito'  >Carrito de Compras</a></li>
+                <li><a href='/usuarios/register'  >Registrarse</a></li>
+                <li><a href='/contact'  >Contacto</a></li>
                 <!--li><a href='/sobre-nosotros'  >Sobre Mi</a></li-->
              </ul>
         </div> 
@@ -37,7 +37,7 @@
             <h3>Productos principales</h3>
             <div class="products">
                 <article>
-                    <a href="/producto">
+                    <a href="/productos/producto">
                         <img src="/img/img_sec1.webp" alt="producto_1" class="product_img"/>
                     </a>
                     <div class="main-article">
