--- a/src/views/producto.ejs
+++ b/src/views/producto.ejs
@@ -40,7 +40,7 @@
             <div class="products_principal">
                 <div class="imgPrinc-carrito">                       
                     <img id="imagenPrincipal" src='/img/img_sec1.webp' alt="imagenPrincipal" onclick="cambiarImagen('/img/img_principal.webp')">
-                     <a href="/carrito" class="icono-truck"> <i class="fas fa-truck"></i> </a>
+                     <a href='/productos/carrito' class="icono-truck"> <i class="fas fa-truck"></i> </a>
                 </div>                                   
                 <div class="contenido_producto">                       
                      <h4 class="titulo">Bordado Gatuno</h4>
