Se separo componentes repetidos-header-.Se creo carpeta 'partial' donde se guardan los mismos

--- a/src/views/carrito.ejs
+++ b/src/views/carrito.ejs
@@ -13,27 +13,8 @@
   </head>
 
   <body>
-    <header>
-      <!--div class="redes">
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-pinterest"></i></a>
-          <a href="#"><i class="fab fa-facebook"></i></a>
-          <a href="#"><i class="fab fa-whatsapp"></i></a>
-      </div-->
-      <div class="nav-bar">
-              <img src="/img/logo-sin-fondo-prueba.png" alt="Logo" class="logo">
-      </div>
-      <div class="nav-bar">
-          <ul class="enlaces">
-            <li><a href=  "/"   >Home</a></li>
-            <li><a href='/productos/catalogo' >Productos</a></li>
-            <li><a href='/productos/carrito'  >Carrito de Compras</a></li>
-            <li><a href='/usuarios/register'  >Registrarse</a></li>
-            <li><a href='/contact'  >Contacto</a></li>
-              
-           </ul>
-      </div>       
- </header>
+    
+    <%- include('./partials/header.ejs')%>
 
  <div class="container-principal"> 
   <div class="container">
