--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -14,27 +14,7 @@
     <script src="https:kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <header>
-    <!--div class="redes">
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-pinterest"></i></a>
-        <a href="#"><i class="fab fa-facebook"></i></a>
-        <a href="#"><i class="fab fa-whatsapp"></i></a>
-    </div-->
-    <div class="nav-bar">
-            <img src="/img/logo-sin-fondo-prueba.png" alt="Logo" class="logo">
-    </div>
-    <div class="nav-bar">
-        <ul class="enlaces">
-          <li><a href=  "/"   >Home</a></li>
-          <li><a href='/productos/catalogo' >Productos</a></li>
-          <li><a href='/productos/carrito'  >Carrito de Compras</a></li>
-          <li><a href='/usuarios/register'  >Registrarse</a></li>
-          <li><a href='/contact'  >Contacto</a></li>
-            <!--li><a href='/sobre-nosotros'  >Sobre Mi</a></li-->
-         </ul>
-    </div>       
-</header>
+  <%- include('./partials/header.ejs')%>
 
   <div class="container-form">
 
