--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -11,7 +11,7 @@ body {
 }
 
 .container-form{
-    width: 100%;
+    /*width: 100%;*/
     max-width: 1100px;
     margin: auto;
     display: grid;
@@ -77,5 +77,30 @@ body {
     color: white;
     border-radius: 3px;
 }
+
+
+/* Media Queries*/
+
+@media ( max-width: 767px) {
+   .container-form{
+        grid-template-columns: repeat(1,1fr);
+        grid-gap: 40px;
+   }
+
+   .container-form form textarea{
+        max-width: 450px;
+        min-width: 450px;
+        min-height: 100px;
+        max-height: 100px;
+    }
+}
+
+@media ( max-width: 1023px) {
+    .container-form{
+         grid-template-columns: repeat(1,1fr);
+         grid-gap: 40px;
+    }
+}
+
 
 
