--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -42,7 +42,7 @@
         <input class="controls" type="password" name="contrasenia" id="contrasenia" placeholder="Contraseña">
         <input class="controls" type="password" name="confirmar_contrasenia" id="confirmar_contrasenia" placeholder="Confirmar contraseña"><br>
         <input class="botom" type="submit" value="Crear Cuenta">
-        <p>¿Tienes una cuenta? <a href="/iniciar-sesion">Iniciar sesión</a></p>
+        <p>¿Tienes una cuenta? <a href="/usuarios/login">Iniciar sesión</a></p>
     </form>
     <footer>
         <!--img src="./img/Hebra_Libre_footer.jpg" id="footer"-->
