Se separo componentes repetidos-footer-.Se creo archivo footer.ejs para codigo  y se guarda en carpeta 'partial

--- a/src/views/carrito.ejs
+++ b/src/views/carrito.ejs
@@ -82,9 +82,6 @@
     </section>
   </div>
 </div>
-    <footer>
-      <!--img src="./img/Hebra_Libre_footer.jpg" id="footer"-->
-      <h5>© Copyright todos los derechos reservados</h6>
-    </footer>
+<%- include('./partials/footer.ejs')%>        
   </body>
 </html>
