--- a/src/views/catalogo.ejs
+++ b/src/views/catalogo.ejs
@@ -113,9 +113,6 @@
             </div>  
         </section>
     </main>
-    <footer>
-        <!--img src="./img/Hebra_Libre_footer.jpg" id="footer"-->
-        <h5>© Copyright todos los derechos reservados</h6>
-    </footer>         
+    <%- include('./partials/footer.ejs')%>        
 </body>
 </html>
