--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -71,9 +71,6 @@
         
             </form>
         </div>
-      <footer>
-        <!--img src="/img/Hebra_Libre_footer.jpg" id="footer"-->
-        <h5>© Copyright todos los derechos reservados</h6>
-       </footer>
+        <%- include('./partials/footer.ejs')%>   
   </body>
 </html>
