--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -24,9 +24,6 @@
         <input class="botom" type="submit" value="Crear Cuenta">
         <p>¿Tienes una cuenta? <a href="/iniciar-sesion">Iniciar sesión</a></p>
     </form>
-    <footer>
-        <!--img src="./img/Hebra_Libre_footer.jpg" id="footer"-->
-        <h5>© Copyright todos los derechos reservados</h6>
-    </footer>
+    <%- include('./partials/footer.ejs')%>   
 </body>
 </html>
