--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -35,18 +35,7 @@
       <input type="submit" name="enviar" value="Enviar" class="btn-enviar">
     </form>
 
-  </div>
- 
-
-
-
-
-
-
-  
-  <footer>
-    <!--img src="./img/Hebra_Libre_footer.jpg" id="footer"-->
-    <h5>© Copyright todos los derechos reservados</h6>
-   </footer>
+  </div> 
+  <%- include('./partials/footer.ejs')%>   
 </body>
 </html>
