--- a/src/views/producto.ejs
+++ b/src/views/producto.ejs
@@ -40,9 +40,6 @@
             </div>
         </section>  
     </main>            
-    <footer>      
-        <!--img src="./img/Hebra_Libre_footer.jpg" id="footer"-->
-        <h5>© Copyright todos los derechos reservados</h6>
-    </footer>  
+    <%- include('./partials/footer.ejs')%>    
 </body>
 </html>
