--- a/public/css/header-footer.css
+++ b/public/css/header-footer.css
@@ -36,12 +36,14 @@ header{
   .enlaces{
     display: flex;
     list-style-type: none;
-    margin-right: 20px;
+  }
+
+  .enlaces a{
+    text-decoration: none;
+    color: #859bb2;
+    text-shadow: white 1px 1px;
   }
   
-  li{
-    margin-right: 10px;
-  }
   .logo{
     width: 190px;
     height: 190px;
@@ -71,4 +73,39 @@ header{
     align-items: flex-end;
     background-color: #cac2c0;
     font-family: 'Roboto', sans-serif;
+  }
+
+  @media (max-width: 768px){
+    header .media{
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: column;
+      justify-content: center;
+      align-content: center;
+    }
+  
+    header div .enlaces{
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+   
+    header div .enlaces a:link, a:visited, a:active{
+      text-decoration: none;
+    }
+
+    header div .redes{
+      position: inherit;
+      display: flex;
+      padding-bottom: 10px;
+      width: 100%;
+      justify-content: center;
+    }
+
+  }
+
+  @media (min-width: 769px){
+    header div .enlaces a{
+      margin-right: 25px;
+    }
   }
