--- a/src/views/catalogo.ejs
+++ b/src/views/catalogo.ejs
@@ -68,7 +68,7 @@
             <div class="products">
                 <article>
                     <a href="#">
-                         <img src="/img/img_sec1.webp" alt="producto_oferta_1" class="product_img"/>
+                         <img src="/img/HebraLibre-BordadoEnPaleta.jpeg" alt="producto_oferta_1" class="product_img"/>
                     </a>
                     <div class="main-article">
                         <a href="#"> <i class="fas fa-truck"></i> </a>
@@ -79,7 +79,7 @@
                 </article>
                 <article>
                     <a href="#">
-                        <img src="/img/img_sec2.webp" alt="producto_oferta_2" class="product_img"/>
+                        <img src="/img/HebraLibre-BordadoFlor.jpeg" alt="producto_oferta_2" class="product_img"/>
                     </a>
                     <div class="main-article">
                         <a href="#"> <i class="fas fa-truck"></i> </a>
@@ -90,7 +90,7 @@
                 </article>
                 <article>
                     <a href="#">
-                        <img src="/img/img_sec3.webp" alt="producto_oferta_3" class="product_img"/>
+                        <img src="/img/HebraLibre-collar.jpeg" alt="producto_oferta_3" class="product_img"/>
                     </a>
                     <div class="main-article">
                         <a href="#"> <i class="fas fa-truck"></i> </a>
@@ -101,7 +101,7 @@
                 </article>
                 <article>
                     <a href="#">
-                          <img src="/img/logo-hebralibre.png" alt="producto_oferta_4" class="product_img"/>
+                          <img src="/img/HebraLibre-pachamama.jpeg" alt="producto_oferta_4" class="product_img"/>
                      </a>
                     <div class="main-article">
                         <a href="#"> <i class="fas fa-truck"></i> </a>
