Se agregan transiciones al header y se modifica el modelo responsivo para mobile

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -11,6 +11,9 @@
                 <img src="/img/logo-sin-fondo-prueba.png" alt="Logo" class="logo">
         </div>
         <div class="nav-bar">
+            <div class="burger-menu">
+                <a href="#" target="_blank"><i class="fas fa-bars"></i></a>
+            </div>
             <ul class="enlaces">
                 <li><a href=  "/"   >Home</a></li>
                 <li><a href='/productos/catalogo' >Productos</a></li>
