--- a/public/css/header-footer.css
+++ b/public/css/header-footer.css
@@ -8,7 +8,7 @@
 
 header{
     background-color: #f5c597;
-    padding: 10px;
+    
     border-bottom: solid 4px #d0b6b7;
   }
   
@@ -22,10 +22,10 @@ header{
     color: #859bb2;
     font-size: 20px;
     margin-right: 7px;
-    border: #d0b6b7 solid 1px;
+    border: #d0b6b7 solid .5px;
     border-radius:30%;
     padding: 4px;
-    box-shadow: 1px 2px 6px #859bb2;
+    box-shadow: 1px 1px 1px #859bb2;
   }
   
   .nav-bar{
@@ -41,7 +41,8 @@ header{
   .enlaces a{
     text-decoration: none;
     color: #859bb2;
-    text-shadow: white 1px 1px;
+    padding: 4px;
+    
   }
   
   .logo{
@@ -50,10 +51,14 @@ header{
     text-align: center;
   }
 
+  header div .burger-menu{
+    display: none;
+  }
+
 
   /*---------fuente de los links del menu----------*/
   a {
-    font-family: 'Roboto', sans-serif;
+    font-family: sans-serif, 'Roboto';
     font-size: 20px;
   }
   
@@ -75,7 +80,7 @@ header{
     font-family: 'Roboto', sans-serif;
   }
 
-  @media (max-width: 768px){
+  @media (max-width: 767px){
     header .media{
       display: flex;
       flex-wrap: wrap;
@@ -92,20 +97,49 @@ header{
    
     header div .enlaces a:link, a:visited, a:active{
       text-decoration: none;
+      /* Se pone oculto hasta que se vincule con el logo*/
+      display: none;
     }
 
     header div .redes{
       position: inherit;
       display: flex;
-      padding-bottom: 10px;
+      padding-bottom: 1px;
       width: 100%;
-      justify-content: center;
+      justify-content: end;
     }
 
+
+
+    header div .burger-menu{
+      display: flex;
+      justify-content: center;
+      align-items: center;
   }
 
-  @media (min-width: 769px){
+  header div .burger-menu .fa-bars{
+    margin: 6px;
+    font-size: 22px;
+  }
+
+
+}
+  @media (min-width: 768px){
     header div .enlaces a{
       margin-right: 25px;
     }
+
+    header div .enlaces a:hover {
+      background-color: #859bb2;
+      border-radius: 5px;
+      color: white;
+    }
+
+    .redes a i:hover{
+      background-color: #859bb2;
+      border-radius: 5px;
+      color: white;
+      border: none;
+    }
+
   }
