adaptacion del responsive del home

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -34,14 +34,14 @@
         <img src="/img/img_sec1.webp" href="#">
             <h2>Bordado Gatuno</h2>
             <p>"Adorna tu espacio con encanto felino con nuestro exquisito bordado a mano de un gato. Cada detalle del suave pelaje y los curiosos ojos ha sido cuidadosamente tejido con amor y destreza artesanal. Este pequeño y elegante gato bordado añadirá una pizca de personalidad y calidez a cualquier rincón de tu hogar. Perfecto como regalo único o para deleitar a los amantes de los gatos, esta obra de arte hecha a mano es más que un adorno, es una expresión de amor por la artesanía y la belleza felina."</p>
-            <a href="#" class="btn btn-primary">Comprar ya!</a>
+            <a href="/productos" class="button_slide slide_right">Comprar ya!</a>
         
     </div>
     <div class="card-2">
         <img src="/img/img_sec2.webp" href="#">
             <h2>Bordado Perruno</h2>
             <p>"Transforma tu espacio en un hogar lleno de alegría y lealtad con nuestro encantador bordado a mano de un perro. Cada trazo meticuloso captura la esencia juguetona y la lealtad incondicional de nuestro amigo canino. Con detalles vívidos que resaltan la personalidad única de cada raza, este bordado es más que una obra de arte: es una celebración de la conexión especial entre humanos y perros. Perfecto como un regalo con corazón o para realzar tu propio espacio con la esencia cálida y amigable de los perros. Descubre la magia de la artesanía y lleva a casa a tu nuevo amigo bordado, listo para iluminar tu vida con amor y alegría."</p>
-            <a href="#" class="btn btn-primary">Comprar ya!</a>
+            <a href="/productos" class="button_slide slide_right">Comprar ya!</a>
         
     </div>
     <div class="card-3">
@@ -51,7 +51,7 @@
                 "Embárcate en un viaje visual a la tranquilidad con nuestro cautivador bordado a mano de un pintoresco pueblito. Cada puntada cuenta la historia de calles empedradas, casitas con encanto y una atmósfera acogedora que solo un pueblo puede ofrecer. Este meticuloso bordado captura la esencia nostálgica de la vida en un pueblito, con detalles que te transportarán a un lugar donde el tiempo se mueve a un ritmo más tranquilo.
                 
                 Perfecto como pieza central en tu hogar o como regalo que evoca recuerdos y sentimientos entrañables, nuestro bordado a mano del pueblito es una celebración de la vida sencilla y la belleza de lo pintoresco. Cada puntada es una expresión de la artesanía y la atención al detalle, creando una obra de arte que iluminará cualquier espacio con la magia y la serenidad de un pequeño rincón pintoresco."</p>
-            <a href="#" class="btn btn-primary">Comprar ya!</a>
+                <a href="/productos" class="button_slide slide_right">Comprar ya!</a>
         
     </div>
 </section>
@@ -74,6 +74,11 @@
 </section>
 
 </section>
+<section class="section-7">
+
+    <img src="/img/Hebra_Libre_footer.jpg" id="footer">
+    
+    </section>
 <%- include('./partials/footer.ejs')%>  
   <!--
    <footer>
